# bytes-handoff

./: .gitignore  Cargo.toml  README.md
bench/: README.md  run-criterion-baseline.sh  run-split-service-perf.sh  run-split-service-strace.sh  run-stream-harness.sh  run-stream-matrix.sh  summarize_stream_harness.py
bench/workloads/: process_usage.rs  stream_harness.rs
benches/: read_handoff.rs  write_handoff.rs
examples/: content_routing.rs  length_prefix.rs  line_protocol.rs  write_handoff.rs
src/: error.rs  lib.rs  read.rs  write.rs
