[package]
name = "bytes-handoff"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "Incremental async byte ingestion and bounded owned write handoff."
license = "MIT"
repository = "https://github.com/eden-dev-inc/bytes-handoff"
readme = "README.md"
keywords = ["async", "bytes", "tokio", "buffer", "handoff"]
categories = ["asynchronous", "network-programming"]

[workspace]
resolver = "3"

[dependencies]
bytes = "1.11"
hdrhistogram = { version = "7", optional = true }
libc = { version = "0.2", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["io-util", "rt", "sync"] }

[features]
bench-tools = [
    "hdrhistogram",
    "libc",
    "tokio/net",
    "tokio/rt-multi-thread",
    "tokio/time",
]

[dev-dependencies]
criterion = "0.5"
memchr = "2"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "sync", "test-util"] }

[lints.clippy]
unwrap_used = "deny"

[[bench]]
name = "read_handoff"
harness = false

[[bench]]
name = "write_handoff"
harness = false

[[bin]]
name = "bench_stream_harness"
path = "src/bin/bench_stream_harness.rs"
required-features = ["bench-tools"]
